--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,4 +1,4 @@
-@import './globalVariables.scss';
+@import './globalVariables.module.scss';
 @import './globalMixins.scss';
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Mono:700|Roboto:100,300,400&display=swap');
