--- a/src/hoc/Modal/Modal.module.scss
+++ b/src/hoc/Modal/Modal.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import 'styles/globalMixins.scss';
 
 .Modal {
@@ -44,8 +45,8 @@
         height: $height;
         top: 50%;
         left: 50%;
-        margin-left: -($width/2);
-        margin-top: -($height/2);
+        margin-left: -(math.div($width, 2));
+        margin-top: -(math.div($height, 2));
     }
 
     h3 {
