--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,7 +1,7 @@
 @import './globalVariables.scss';
 @import './globalMixins.scss';
 
-@import url('https://fonts.googleapis.com/css2?family=Lato|Roboto+Mono:wght@700|Roboto:100,300,4000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono:wght@700&family=Roboto:wght@100;300;400&display=swap');
 
 html,
 body {
