fix: scss & styles (#34)
* fix(scss): switch globalVariables to a module to allow importing in JS

* feat(fonts): use fonts locally cached during ssg

* fix(scroll & theme color): fix useIsPageScrolled & useSmoothChangeThemeColorOnScroll

* fix(layout): layout is not a page now

--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,12 +1,9 @@
-@import './globalVariables.scss';
+@import './globalVariables.module.scss';
 @import './globalMixins.scss';
-
-@import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Mono:700|Roboto:100,300,400&display=swap');
 
 html,
 body {
   margin: 0;
-  font-family: Lato;
   line-height: 1.5;
   background-color: $background-color;
 
