--- a/src/components/HomePage/AboutMe.component.module.scss
+++ b/src/components/HomePage/AboutMe.component.module.scss
@@ -36,11 +36,13 @@
   height: 100%;
   box-sizing: border-box;
 
-  display: flex;
-  flex-flow: column;
-  @media (min-width: $media-breakpoint-2) {
-    justify-content: space-between;
-    flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 32px;
+
+  @media (min-width: $media-breakpoint-4) {
+    grid-template-columns: 8fr 2fr;
+    gap: 5%;
   }
 }
 
@@ -57,22 +59,9 @@
 }
 
 .Description {
-  width: 100%;
-
-  @media (min-width: $media-breakpoint-2) {
-    width: 55%;
-  }
-
   p:first-of-type {
     margin-top: 0;
     padding-top: 0;
-  }
-}
-
-.Technologies {
-  width: 100%;
-  @media (min-width: $media-breakpoint-2) {
-    width: 37.5%;
   }
 }
 
