--- a/src/components/HomePage/AboutMe.component.module.scss
+++ b/src/components/HomePage/AboutMe.component.module.scss
@@ -8,6 +8,7 @@
 
 .Header {
   @include header;
+
   @media (min-width: $media-breakpoint-4) {
     padding-bottom: 0.5%;
   }
@@ -22,9 +23,11 @@
     font-size: 2.75em;
     padding-top: 3%;
   }
+
   @media (min-width: $media-breakpoint-2) {
     padding-top: 2%;
   }
+
   @media (min-width: $media-breakpoint-3) {
     padding-top: 2%;
     padding-bottom: 0.5%;
@@ -36,11 +39,13 @@
   height: 100%;
   box-sizing: border-box;
 
-  display: flex;
-  flex-flow: column;
-  @media (min-width: $media-breakpoint-2) {
-    justify-content: space-between;
-    flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 32px;
+
+  @media (min-width: $media-breakpoint-4) {
+    grid-template-columns: 8fr 2fr;
+    gap: 5%;
   }
 }
 
@@ -57,22 +62,9 @@
 }
 
 .Description {
-  width: 100%;
-
-  @media (min-width: $media-breakpoint-2) {
-    width: 55%;
-  }
-
   p:first-of-type {
     margin-top: 0;
     padding-top: 0;
-  }
-}
-
-.Technologies {
-  width: 100%;
-  @media (min-width: $media-breakpoint-2) {
-    width: 37.5%;
   }
 }
 
