--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -2,7 +2,8 @@
 @import './globalMixins.scss';
 
 html,
-body {
+body,
+div#root-layout {
   margin: 0;
   line-height: 1.5;
   background-color: $background-color;
@@ -18,7 +19,8 @@ body {
 }
 
 body,
-div#root {
+div#root,
+div#root-layout {
   width: 100%;
   height: 100%;
 }
@@ -50,7 +52,7 @@ html {
   margin-right: 0;
 }
 
-#__next {
+div#root-layout {
   display: flex;
   justify-content: center;
 }
