--- a/src/styles/globalMixins.scss
+++ b/src/styles/globalMixins.scss
@@ -1,12 +1,17 @@
 @import './globalVariables.module.scss';
 
 @mixin header {
-  font-family: $header-font-family;
   font-size: $header-font-size;
   font-weight: 100;
-  margin: 1%;
+
   text-align: center;
-  margin-bottom: 40px;
+
+  margin: 1%;
+  margin-bottom: 24px;
+
+  @media (min-width: $media-breakpoint-4) {
+    margin-bottom: 40px;
+  }
 }
 
 @mixin container {
