feat(avatar): add avatar to header

--- a/src/components/Header/Header.component.module.scss
+++ b/src/components/Header/Header.component.module.scss
@@ -80,3 +80,13 @@
     display: none;
   }
 }
+
+.Avatar {
+  width: 64px;
+  height: 64px;
+
+  border-radius: 9999px;
+
+  margin-right: 16px;
+  margin-left: 16px;
+}
