--- a/src/components/Navigation/NavigationItem.component.module.scss
+++ b/src/components/Navigation/NavigationItem.component.module.scss
@@ -50,6 +50,10 @@
   cursor: pointer;
   padding: 0;
   margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Active {
