fix(rwd/avatar): avatar now scales better with screen size

--- a/src/components/Header/Header.component.module.scss
+++ b/src/components/Header/Header.component.module.scss
@@ -82,11 +82,16 @@
 }
 
 .Avatar {
-  width: 64px;
-  height: 64px;
+  width: 40px;
+  height: 40px;
 
   border-radius: 9999px;
 
   margin-right: 16px;
   margin-left: 16px;
+
+  @media (min-width: $media-breakpoint-3) {
+    width: 64px;
+    height: 64px;
+  }
 }
