fix(blog): adjust whitespaces, add excerpt to single post

--- a/src/components/BlogPage/PostList/SinglePostPreview.component.module.scss
+++ b/src/components/BlogPage/PostList/SinglePostPreview.component.module.scss
@@ -29,13 +29,15 @@
 
 .Category {
   text-transform: uppercase;
-  letter-spacing: 0.07em;
+  letter-spacing: 0.06em;
 
   color: #000;
 
   :visited {
     color: #000;
   }
+
+  text-decoration: none;
 }
 
 .Excerpt {
