--- a/src/components/BlogPage/SinglePost/SinglePost.component.module.scss
+++ b/src/components/BlogPage/SinglePost/SinglePost.component.module.scss
@@ -39,3 +39,11 @@
   text-transform: uppercase;
   letter-spacing: 0.07em;
 }
+
+.CategoriesKeywords {
+  margin-top: 64px;
+}
+
+.Excerpt {
+  margin-top: 32px;
+}
