--- a/src/components/BlogPage/SinglePost/SinglePost.component.module.scss
+++ b/src/components/BlogPage/SinglePost/SinglePost.component.module.scss
@@ -31,6 +31,11 @@
 
 .Header {
   display: flex;
+  flex-flow: column;
+}
+
+.CategoryAndDate {
+  display: flex;
   flex-flow: row;
   justify-content: space-between;
 }
@@ -46,4 +51,10 @@
 
 .Excerpt {
   margin-top: 32px;
+}
+
+.ReadingTime {
+  display: flex;
+  justify-content: flex-end;
+  color: #6c6c6c;
 }
