--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,5 +1,6 @@
 @import './globalVariables.module.scss';
 @import './globalMixins.scss';
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
 
 html,
 body,
@@ -69,4 +70,8 @@ div#root-layout {
 
 ::-webkit-scrollbar-thumb {
   background-color: #ff4248;
+}
+
+.latoFont {
+  font-family: 'Lato', sans-serif;
 }
