Revert "fix(lato font): move lato font fetching to root layout component (#76)"
This reverts commit 86fa46af74853bac327458852b0c39dc6c468954.

--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,5 +1,6 @@
 @import './globalVariables.module.scss';
 @import './globalMixins.scss';
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
 
 html,
 body,
